# PromocodeAPI

./: README.md
solution/: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  check.sh  clean_dev_env.sh  clean_env.sh  compose.dev.yaml  manage.py  pyproject.toml
solution/api/: urls.py
solution/api/v1/: auth.py  handlers.py  router.py  schemas.py
solution/api/v1/business/: apps.py  schemas.py  utils.py  views.py
solution/api/v1/ping/: apps.py  schemas.py  views.py
solution/api/v1/user/: apps.py  schemas.py  utils.py  views.py
solution/apps/business/: apps.py  models.py
solution/apps/business/migrations/: 0001_initial.py
solution/apps/core/: models.py
solution/apps/promo/: admin.py  apps.py  models.py  validators.py
solution/apps/promo/migrations/: 0001_initial.py
solution/apps/user/: models.py
solution/apps/user/migrations/: 0001_initial.py
solution/config/: asgi.py  errors.py  handlers.py  settings.py  urls.py  wsgi.py
solution/config/integrations/: __init__.py
solution/config/integrations/antifraud/: healthcheck.py  interactor.py
solution/config/notifiers/: telegram.py
tests/: .gitignore  compose.testing.yaml  config.yml  conftest.py  pyproject.toml  pytest.ini  run-tests.sh  test_01_ping.tavern.yml  test_02_business_signup.tavern.yml  test_02_business_signup_invalid_password.tavern.yml  test_03_business_signin.tavern.yml  test_04_business_promo_create_invalid.tavern.yml  test_04_business_promo_create_valid.tavern.yml  test_04_business_promo_create_valid_tricky.tavern.yml  test_05_business_promo_list.tavern.yml  test_05_business_promo_list_invalid.tavern.yml  test_06_business_promo_id_invalid.tavern.yml  test_06_business_promo_id_valid.tavern.yml  test_07_user_signup.tavern.yml  test_07_user_signup_invalid.tavern.yml  test_08_user_signin.tavern.yml  test_09_user_profile.tavern.yml  test_09_user_profile_invalid.tavern.yml  test_10_user_feed.tavern.yml  test_10_user_promo.tavern.yml  test_11_user_like.tavern.yml  test_12_user_comments.tavern.yml  test_13_user_promo_activate.tavern.yml  test_13_user_promo_activate_validate_cache.tavern.yml  test_14_business_activate_promo.tavern.yml  test_14_business_get_stat.tavern.yml
tests/components/: basic_auth.yml  basic_promo.yml
tests/components/json/: promo1.json  promo2.json  promo3.json  promo4.json  promo5.json
